// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentAuth characterization > pins /auth.md, PRM, and AS metadata for the default enabled set 1`] = `
"# auth.md

You are an agent. **OpenSesame** supports agentic registration:
discover → register → (claim if needed) → exchange for an access_token → call API → handle revocation.

Profile: \`workos-auth.md/v0.6.0\`. This is a WorkOS ecosystem protocol, not an IETF RFC.
Runtime metadata at the Protected Resource Metadata and Authorization Server metadata URLs
is authoritative if this file and those documents disagree.

Resource: \`https://identity.example/\`
Authorization server: \`https://identity.example\`

## Step 1 — Discover

A 401 from the resource includes:

\`\`\`http
WWW-Authenticate: Bearer resource_metadata="https://identity.example/.well-known/oauth-protected-resource"
\`\`\`

### 1a. Protected Resource Metadata

\`GET https://identity.example/.well-known/oauth-protected-resource\`

### 1b. Authorization Server metadata

\`GET https://identity.example/.well-known/oauth-authorization-server\`

Read \`agent_auth\` in full. Identity types actually enabled: anonymous, service_auth.
Provider ID-JAG (\`identity_assertion\`) is not advertised and not enabled.
SET events are not advertised and not enabled.

## Step 2 — Pick a method

1. No user identity → \`anonymous\` (if enabled).
2. Email hint only → \`service_auth\` (if enabled).
3. Provider ID-JAG → not accepted unless discovery lists \`identity_assertion\`.

## Step 3 — Register

### anonymous

\`\`\`http
POST /agent/identity
Content-Type: application/json

{ "type": "anonymous" }
\`\`\`

Response (200) includes a service-signed \`identity_assertion\` (JWT \`typ: os-sia+jwt\`),
\`pre_claim_scopes\`, a one-time \`claim_token\` (\`clm_…\`), and \`post_claim_scopes\`.
Exchange the assertion at \`/oauth2/token\` immediately. The claim ceremony is optional.
### service_auth

\`\`\`http
POST /agent/identity
Content-Type: application/json

{ "type": "service_auth", "login_hint": "<email>" }
\`\`\`

\`login_hint\` is not proof of identity and is not used to look up or merge accounts.
The response has a \`claim\` block (\`user_code\`, \`verification_uri\`, \`expires_in\`, \`interval\`)
and **no** identity assertion until the user completes the ceremony.

Do not send a product provisional bearer (\`pst_…\`) or a product claim token (\`osc_clm_…\`) here.

## Step 4 — Claim ceremony

For anonymous, start a ceremony:

\`\`\`http
POST /agent/identity/claim
Content-Type: application/json

{ "claim_token": "clm_…", "email": "user@example.com" }
\`\`\`

Surface \`verification_uri\` and \`user_code\` to the user. They sign in at OpenSesame
and type the code on a page OpenSesame owns. Poll:

\`\`\`http
POST /oauth2/token
Content-Type: application/x-www-form-urlencoded

grant_type=urn:workos:agent-auth:grant-type:claim&claim_token=clm_…
\`\`\`

Honor \`interval\` (5s). Outer claim window: 86400s.
On success the pre-claim access token is revoked; use the returned post-claim token.

## Step 5 — Exchange the assertion

\`\`\`http
POST /oauth2/token
Content-Type: application/x-www-form-urlencoded

grant_type=urn:ietf:params:oauth:grant-type:jwt-bearer&assertion=<identity_assertion>&resource=https://identity.example/
\`\`\`

There is no OAuth refresh_token in this flow. Re-exchange the still-valid service
assertion. Service assertions use \`typ: os-sia+jwt\` and are not ID-JAGs.

## Step 6 — Use the access_token

\`Authorization: Bearer <aat_…>\` against \`https://identity.example/\`.

## Revocation

Credential: \`POST https://identity.example/oauth2/revoke\` (\`token\` + \`token_type_hint=access_token\`), RFC 7009.
Registration: owner-initiated revoke or expiry. Provider SET delivery is not enabled.

## Scopes

- pre-claim: resource:read, resource:create:temporary
- post-claim: resource:read, resource:create:temporary, project:create:temporary, claim:create
- resource-supported: resource:read, resource:create:temporary, project:create:temporary, claim:create

Effective scopes are the intersection of requested, registration-state, resource-supported,
and domain policy. A signed assertion cannot grant a scope policy denies.

## Errors

| Code | Where | What to do |
| --- | --- | --- |
| anonymous_not_enabled | /agent/identity | Use another enabled type |
| service_auth_not_enabled | /agent/identity | Use another enabled type |
| identity_assertion_not_enabled | /agent/identity | ID-JAG is not enabled |
| invalid_login_hint | /agent/identity | login_hint must be an email |
| invalid_claim_token | /agent/identity/claim | Restart at Step 3 |
| claimed_or_in_flight | /agent/identity/claim | Follow the Step 3 response |
| claim_expired | /agent/identity/claim | Restart at Step 3 |
| invalid_grant | /oauth2/token | Assertion expired/revoked; re-register |
| authorization_pending | /oauth2/token | Wait \`interval\` |
| expired_token | /oauth2/token | Re-init claim or re-register |
| slow_down | /oauth2/token | Increase interval |

Existing guest product APIs remain at \`POST https://identity.example/v1/principals/provisional\`
(\`pst_…\` bearers). Those are not service identity assertions.

Existing RFC 8628 device authorization remains at the authorization server's /device endpoint.
Never print \`device_code\` values.

## Secrets policy

This document must never embed client secrets, private keys, bearer tokens, or reusable credentials.
"
`;

exports[`AgentAuth characterization > pins /auth.md, PRM, and AS metadata for the default enabled set 2`] = `
{
  "authorization_servers": [
    "https://identity.example",
  ],
  "bearer_methods_supported": [
    "header",
  ],
  "resource": "https://identity.example/",
  "resource_documentation": "https://identity.example/auth.md",
  "resource_name": "OpenSesame",
  "scopes_supported": [
    "resource:read",
    "resource:create:temporary",
    "project:create:temporary",
    "claim:create",
  ],
}
`;

exports[`AgentAuth characterization > pins /auth.md, PRM, and AS metadata for the default enabled set 3`] = `
{
  "agent_auth": {
    "claim_endpoint": "https://identity.example/agent/identity/claim",
    "identity_endpoint": "https://identity.example/agent/identity",
    "identity_types_supported": [
      "anonymous",
      "service_auth",
    ],
    "skill": "https://identity.example/auth.md",
  },
  "authorization_endpoint": "https://identity.example/auth",
  "code_challenge_methods_supported": [
    "S256",
  ],
  "device_authorization_endpoint": "https://identity.example/device/auth",
  "grant_types_supported": [
    "authorization_code",
    "refresh_token",
    "urn:ietf:params:oauth:grant-type:device_code",
    "urn:ietf:params:oauth:grant-type:jwt-bearer",
    "urn:workos:agent-auth:grant-type:claim",
  ],
  "introspection_endpoint": "https://identity.example/introspect",
  "issuer": "https://identity.example",
  "jwks_uri": "https://identity.example/jwks",
  "registration_endpoint": "https://identity.example/reg",
  "revocation_endpoint": "https://identity.example/oauth2/revoke",
  "scopes_supported": [
    "resource:read",
    "resource:create:temporary",
    "project:create:temporary",
    "claim:create",
  ],
  "token_endpoint": "https://identity.example/token",
}
`;

exports[`AgentAuth characterization > pins CSP and refuses an off-site login return_to on the wire 1`] = `
"<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="color-scheme" content="light"><meta name="robots" content="noindex"><title>Sign in to claim</title><style>:root{color-scheme:light;--canvas:#fafafa;--ink:#171717;--ink-2:#5c5c5c;--line:#e7e7e7;--accent:#0d7268;--err:#b32424;--mono:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;--sans:system-ui,sans-serif;--radius:2px}
*{box-sizing:border-box}
html,body{margin:0;background:var(--canvas);color:var(--ink)}
body{font-family:var(--sans);font-size:0.9375rem;line-height:1.5;min-height:100dvh;display:flex;flex-direction:column}
.wrap{width:min(32rem,calc(100% - 2rem));margin:2.5rem auto 3rem}
.brand{display:flex;align-items:center;gap:0.55rem;font-family:var(--mono);font-size:0.75rem;font-weight:600;letter-spacing:-0.02em;margin:0 0 1.5rem}
.mark{flex:none}
h1{font-family:var(--mono);font-size:1.4rem;font-weight:600;letter-spacing:-0.021em;line-height:1.2;margin:0 0 0.55rem}
.lede{color:var(--ink-2);margin:0 0 1.25rem;max-width:36em}
.record{border-top:1px solid var(--line);margin:0 0 1.25rem;padding:0.65rem 0}
.record dt{font-family:var(--mono);font-size:0.75rem;font-weight:600;color:var(--ink-2);margin:0}
.record dd{margin:0.15rem 0 0.7rem;font-family:var(--mono);font-size:0.8125rem}
.record dd:last-child{margin-bottom:0}
.field{display:grid;grid-template-columns:6.5rem 1fr;gap:0.4rem 0.75rem;align-items:baseline;border-bottom:1px solid var(--line);padding:0.35rem 0 0.45rem;margin:0 0 1rem}
.field label{font-family:var(--mono);font-size:0.75rem;font-weight:600}
.field input{font-family:var(--mono);font-size:1.0625rem;letter-spacing:0.18em;border:0;border-radius:0;background:transparent;color:var(--ink);padding:0.2rem 0;width:100%;caret-color:var(--ink)}
.field input:focus{outline:none}
.field:focus-within{border-bottom-color:var(--ink);border-bottom-width:2px;padding-bottom:calc(0.45rem - 1px)}
.hint{font-family:var(--mono);font-size:0.75rem;color:var(--ink-2);margin:-0.4rem 0 1.1rem}
.alert{color:var(--err);font-family:var(--mono);font-size:0.8125rem;margin:0 0 1rem}
.go-row{display:flex;align-items:center;gap:0.6rem;margin:1.25rem 0 0}
.go{appearance:none;display:grid;place-items:center;width:2.5rem;height:2.5rem;flex:none;border:0;border-radius:var(--radius);background:var(--ink);color:var(--canvas);cursor:pointer;text-decoration:none}
.go:hover{background:color-mix(in srgb,var(--ink) 82%,var(--canvas))}
.go:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.go-verb{font-family:var(--mono);font-size:0.8125rem;color:var(--ink-2)}
.mute{font-family:var(--mono);font-size:0.75rem;color:var(--ink-2);margin:1.5rem 0 0}
a.inline{color:var(--ink);text-underline-offset:0.18em}
::selection{background:var(--ink);color:var(--canvas)}
@media (pointer:coarse){
  .go{width:2.75rem;height:2.75rem}
  .field{grid-template-columns:1fr;min-height:2.75rem}
}
@media (prefers-reduced-motion:reduce){.go{transition:none}}</style></head><body><main class="wrap"><p class="brand"><svg class="mark" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true"><rect x="2" y="2" width="8" height="14" fill="#171717"/><rect x="10" y="4" width="6" height="12" fill="#0d7268"/></svg> OpenSesame</p><h1>Sign in to continue</h1>
<p class="lede">Claiming an agent needs an OpenSesame session. Sign in, then we bring you back to enter the agent&rsquo;s code.</p>
<form method="post" action="/login/start">
<input type="hidden" name="return_to" value="/claim">
<div class="go-row"><button class="go" type="submit" aria-label="Sign in" title="Sign in"></button><span class="go-verb" aria-hidden="true">Sign in</span></div>
</form>
<p class="mute">Issuer https://identity.example</p>
<p class="mute">After sign-in you return to <a class="inline" href="/claim">the claim page</a>.</p></main></body></html>"
`;

exports[`AgentAuth characterization > pins the claim and login HTML a human is shown 1`] = `
"<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="color-scheme" content="light"><meta name="robots" content="noindex"><title>Claim this agent</title><style>:root{color-scheme:light;--canvas:#fafafa;--ink:#171717;--ink-2:#5c5c5c;--line:#e7e7e7;--accent:#0d7268;--err:#b32424;--mono:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;--sans:system-ui,sans-serif;--radius:2px}
*{box-sizing:border-box}
html,body{margin:0;background:var(--canvas);color:var(--ink)}
body{font-family:var(--sans);font-size:0.9375rem;line-height:1.5;min-height:100dvh;display:flex;flex-direction:column}
.wrap{width:min(32rem,calc(100% - 2rem));margin:2.5rem auto 3rem}
.brand{display:flex;align-items:center;gap:0.55rem;font-family:var(--mono);font-size:0.75rem;font-weight:600;letter-spacing:-0.02em;margin:0 0 1.5rem}
.mark{flex:none}
h1{font-family:var(--mono);font-size:1.4rem;font-weight:600;letter-spacing:-0.021em;line-height:1.2;margin:0 0 0.55rem}
.lede{color:var(--ink-2);margin:0 0 1.25rem;max-width:36em}
.record{border-top:1px solid var(--line);margin:0 0 1.25rem;padding:0.65rem 0}
.record dt{font-family:var(--mono);font-size:0.75rem;font-weight:600;color:var(--ink-2);margin:0}
.record dd{margin:0.15rem 0 0.7rem;font-family:var(--mono);font-size:0.8125rem}
.record dd:last-child{margin-bottom:0}
.field{display:grid;grid-template-columns:6.5rem 1fr;gap:0.4rem 0.75rem;align-items:baseline;border-bottom:1px solid var(--line);padding:0.35rem 0 0.45rem;margin:0 0 1rem}
.field label{font-family:var(--mono);font-size:0.75rem;font-weight:600}
.field input{font-family:var(--mono);font-size:1.0625rem;letter-spacing:0.18em;border:0;border-radius:0;background:transparent;color:var(--ink);padding:0.2rem 0;width:100%;caret-color:var(--ink)}
.field input:focus{outline:none}
.field:focus-within{border-bottom-color:var(--ink);border-bottom-width:2px;padding-bottom:calc(0.45rem - 1px)}
.hint{font-family:var(--mono);font-size:0.75rem;color:var(--ink-2);margin:-0.4rem 0 1.1rem}
.alert{color:var(--err);font-family:var(--mono);font-size:0.8125rem;margin:0 0 1rem}
.go-row{display:flex;align-items:center;gap:0.6rem;margin:1.25rem 0 0}
.go{appearance:none;display:grid;place-items:center;width:2.5rem;height:2.5rem;flex:none;border:0;border-radius:var(--radius);background:var(--ink);color:var(--canvas);cursor:pointer;text-decoration:none}
.go:hover{background:color-mix(in srgb,var(--ink) 82%,var(--canvas))}
.go:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.go-verb{font-family:var(--mono);font-size:0.8125rem;color:var(--ink-2)}
.mute{font-family:var(--mono);font-size:0.75rem;color:var(--ink-2);margin:1.5rem 0 0}
a.inline{color:var(--ink);text-underline-offset:0.18em}
::selection{background:var(--ink);color:var(--canvas)}
@media (pointer:coarse){
  .go{width:2.75rem;height:2.75rem}
  .field{grid-template-columns:1fr;min-height:2.75rem}
}
@media (prefers-reduced-motion:reduce){.go{transition:none}}</style></head><body><main class="wrap"><p class="brand"><svg class="mark" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true"><rect x="2" y="2" width="8" height="14" fill="#171717"/><rect x="10" y="4" width="6" height="12" fill="#0d7268"/></svg> OpenSesame</p><h1>Claim this agent</h1>
<p class="lede">Enter the 6-digit code the agent printed. That binds this signed-in session to the agent. Accounts are not merged by email.</p>


<form method="post" action="/agent/identity/claim/complete">
<input type="hidden" name="claim_attempt_token" value="clat_fixed.secret">
<div class="field"><label for="user_code">Code</label><input id="user_code" name="user_code" inputmode="numeric" autocomplete="one-time-code" enterkeyhint="done" spellcheck="false" required pattern="[0-9]{6}" maxlength="6" aria-describedby="claim-hint"></div>
<p class="hint" id="claim-hint">Six digits. Not a password.</p>
<div class="go-row"><button class="go" type="submit" aria-label="Confirm this agent" title="Confirm this agent"></button><span class="go-verb" aria-hidden="true">Confirm this agent</span></div>
</form>
<p class="mute">If this was not you, close the window. The agent will not gain these scopes.</p></main></body></html>"
`;

exports[`AgentAuth characterization > pins the claim and login HTML a human is shown 2`] = `
"<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="color-scheme" content="light"><meta name="robots" content="noindex"><title>Claim complete</title><style>:root{color-scheme:light;--canvas:#fafafa;--ink:#171717;--ink-2:#5c5c5c;--line:#e7e7e7;--accent:#0d7268;--err:#b32424;--mono:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;--sans:system-ui,sans-serif;--radius:2px}
*{box-sizing:border-box}
html,body{margin:0;background:var(--canvas);color:var(--ink)}
body{font-family:var(--sans);font-size:0.9375rem;line-height:1.5;min-height:100dvh;display:flex;flex-direction:column}
.wrap{width:min(32rem,calc(100% - 2rem));margin:2.5rem auto 3rem}
.brand{display:flex;align-items:center;gap:0.55rem;font-family:var(--mono);font-size:0.75rem;font-weight:600;letter-spacing:-0.02em;margin:0 0 1.5rem}
.mark{flex:none}
h1{font-family:var(--mono);font-size:1.4rem;font-weight:600;letter-spacing:-0.021em;line-height:1.2;margin:0 0 0.55rem}
.lede{color:var(--ink-2);margin:0 0 1.25rem;max-width:36em}
.record{border-top:1px solid var(--line);margin:0 0 1.25rem;padding:0.65rem 0}
.record dt{font-family:var(--mono);font-size:0.75rem;font-weight:600;color:var(--ink-2);margin:0}
.record dd{margin:0.15rem 0 0.7rem;font-family:var(--mono);font-size:0.8125rem}
.record dd:last-child{margin-bottom:0}
.field{display:grid;grid-template-columns:6.5rem 1fr;gap:0.4rem 0.75rem;align-items:baseline;border-bottom:1px solid var(--line);padding:0.35rem 0 0.45rem;margin:0 0 1rem}
.field label{font-family:var(--mono);font-size:0.75rem;font-weight:600}
.field input{font-family:var(--mono);font-size:1.0625rem;letter-spacing:0.18em;border:0;border-radius:0;background:transparent;color:var(--ink);padding:0.2rem 0;width:100%;caret-color:var(--ink)}
.field input:focus{outline:none}
.field:focus-within{border-bottom-color:var(--ink);border-bottom-width:2px;padding-bottom:calc(0.45rem - 1px)}
.hint{font-family:var(--mono);font-size:0.75rem;color:var(--ink-2);margin:-0.4rem 0 1.1rem}
.alert{color:var(--err);font-family:var(--mono);font-size:0.8125rem;margin:0 0 1rem}
.go-row{display:flex;align-items:center;gap:0.6rem;margin:1.25rem 0 0}
.go{appearance:none;display:grid;place-items:center;width:2.5rem;height:2.5rem;flex:none;border:0;border-radius:var(--radius);background:var(--ink);color:var(--canvas);cursor:pointer;text-decoration:none}
.go:hover{background:color-mix(in srgb,var(--ink) 82%,var(--canvas))}
.go:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.go-verb{font-family:var(--mono);font-size:0.8125rem;color:var(--ink-2)}
.mute{font-family:var(--mono);font-size:0.75rem;color:var(--ink-2);margin:1.5rem 0 0}
a.inline{color:var(--ink);text-underline-offset:0.18em}
::selection{background:var(--ink);color:var(--canvas)}
@media (pointer:coarse){
  .go{width:2.75rem;height:2.75rem}
  .field{grid-template-columns:1fr;min-height:2.75rem}
}
@media (prefers-reduced-motion:reduce){.go{transition:none}}</style></head><body><main class="wrap"><p class="brand"><svg class="mark" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true"><rect x="2" y="2" width="8" height="14" fill="#171717"/><rect x="10" y="4" width="6" height="12" fill="#0d7268"/></svg> OpenSesame</p><h1>The agent may now act</h1><p class="lede">You can close this window. The agent will pick up the new credential on its next poll.</p></main></body></html>"
`;

exports[`AgentAuth characterization > pins the claim and login HTML a human is shown 3`] = `
"<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="color-scheme" content="light"><meta name="robots" content="noindex"><title>Sign in to claim</title><style>:root{color-scheme:light;--canvas:#fafafa;--ink:#171717;--ink-2:#5c5c5c;--line:#e7e7e7;--accent:#0d7268;--err:#b32424;--mono:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;--sans:system-ui,sans-serif;--radius:2px}
*{box-sizing:border-box}
html,body{margin:0;background:var(--canvas);color:var(--ink)}
body{font-family:var(--sans);font-size:0.9375rem;line-height:1.5;min-height:100dvh;display:flex;flex-direction:column}
.wrap{width:min(32rem,calc(100% - 2rem));margin:2.5rem auto 3rem}
.brand{display:flex;align-items:center;gap:0.55rem;font-family:var(--mono);font-size:0.75rem;font-weight:600;letter-spacing:-0.02em;margin:0 0 1.5rem}
.mark{flex:none}
h1{font-family:var(--mono);font-size:1.4rem;font-weight:600;letter-spacing:-0.021em;line-height:1.2;margin:0 0 0.55rem}
.lede{color:var(--ink-2);margin:0 0 1.25rem;max-width:36em}
.record{border-top:1px solid var(--line);margin:0 0 1.25rem;padding:0.65rem 0}
.record dt{font-family:var(--mono);font-size:0.75rem;font-weight:600;color:var(--ink-2);margin:0}
.record dd{margin:0.15rem 0 0.7rem;font-family:var(--mono);font-size:0.8125rem}
.record dd:last-child{margin-bottom:0}
.field{display:grid;grid-template-columns:6.5rem 1fr;gap:0.4rem 0.75rem;align-items:baseline;border-bottom:1px solid var(--line);padding:0.35rem 0 0.45rem;margin:0 0 1rem}
.field label{font-family:var(--mono);font-size:0.75rem;font-weight:600}
.field input{font-family:var(--mono);font-size:1.0625rem;letter-spacing:0.18em;border:0;border-radius:0;background:transparent;color:var(--ink);padding:0.2rem 0;width:100%;caret-color:var(--ink)}
.field input:focus{outline:none}
.field:focus-within{border-bottom-color:var(--ink);border-bottom-width:2px;padding-bottom:calc(0.45rem - 1px)}
.hint{font-family:var(--mono);font-size:0.75rem;color:var(--ink-2);margin:-0.4rem 0 1.1rem}
.alert{color:var(--err);font-family:var(--mono);font-size:0.8125rem;margin:0 0 1rem}
.go-row{display:flex;align-items:center;gap:0.6rem;margin:1.25rem 0 0}
.go{appearance:none;display:grid;place-items:center;width:2.5rem;height:2.5rem;flex:none;border:0;border-radius:var(--radius);background:var(--ink);color:var(--canvas);cursor:pointer;text-decoration:none}
.go:hover{background:color-mix(in srgb,var(--ink) 82%,var(--canvas))}
.go:focus-visible{outline:2px solid var(--accent);outline-offset:3px}
.go-verb{font-family:var(--mono);font-size:0.8125rem;color:var(--ink-2)}
.mute{font-family:var(--mono);font-size:0.75rem;color:var(--ink-2);margin:1.5rem 0 0}
a.inline{color:var(--ink);text-underline-offset:0.18em}
::selection{background:var(--ink);color:var(--canvas)}
@media (pointer:coarse){
  .go{width:2.75rem;height:2.75rem}
  .field{grid-template-columns:1fr;min-height:2.75rem}
}
@media (prefers-reduced-motion:reduce){.go{transition:none}}</style></head><body><main class="wrap"><p class="brand"><svg class="mark" width="18" height="18" viewBox="0 0 18 18" aria-hidden="true"><rect x="2" y="2" width="8" height="14" fill="#171717"/><rect x="10" y="4" width="6" height="12" fill="#0d7268"/></svg> OpenSesame</p><h1>Sign in to continue</h1>
<p class="lede">Claiming an agent needs an OpenSesame session. Sign in, then we bring you back to enter the agent&rsquo;s code.</p>
<form method="post" action="/login/start">
<input type="hidden" name="return_to" value="/claim?claim_attempt_token=clat_fixed.secret">
<div class="go-row"><button class="go" type="submit" aria-label="Sign in" title="Sign in"></button><span class="go-verb" aria-hidden="true">Sign in</span></div>
</form>
<p class="mute">Issuer https://identity.example</p>
<p class="mute">After sign-in you return to <a class="inline" href="/claim?claim_attempt_token=clat_fixed.secret">the claim page</a>.</p></main></body></html>"
`;
